# Knots

./: Changelog.md  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_router.dart  main.dart
lib/models/: rss_provider.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/tools/: folder_permission.dart  fonts_tools.dart  utils.dart
lib/ui/: book_screen.dart  editor_screen.dart  home_scaffold.dart  home_screen.dart  rss_screen.dart
lib/ui/lists/: contents_screen.dart  group_list_screen.dart  item_list_screen.dart  scroll_area.dart
lib/ui/utils/: add_feed_screen.dart  settings_screen.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  simple.rs
rust/src/book/: epub_book.rs
rust/src/rss/: feed.rs  feed2.rs  shce.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_frb_code.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_frb_code.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
