[package]
name = "rust_lib_frb_code"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
epub = "2.1.2"
flutter_rust_bridge = "=2.1.0"
feed-rs = "2.1.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }

# async-sqlite = "0.3"
# async-sqlite = { version =  "0.3.1", default-features = false }

# sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
# diesel = { version = "2.0", features = ["sqlite", "32-column-tables"] }
# diesel_migrations = "2.0"
# native-tls = { version = "0.2", default-features = false, features = ["rustls-tls"] }

# diesel = { version = "2.2.2", features = ["sqlite"] }
# diesel-async = {version = "0.5", features = ["sqlite", "sync-connection-wrapper"]}
# diesel-async = {version = "0.5", features = ["sqlite"]}

# diesel = { version = "2.1.0", features = ["sqlite"] }
# diesel-async = { version = "0.5", features = ["sqlite"] }
# bb8 = "0.8"

log = "0.4.22"
env_logger = "0.11.5"

futures = "0.3.30"